2001-09-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: rewrite ethod call code.
	* Source/callframe.h: ditto
	* Source/callframe.m: ditto
	* Source/cifframe.h: ditto
	* Source/cifframe.m: ditto
	* Source/mframe.m: ditto
	* Source/mframe/mframe.head: ditto
	* Headers/gnustep/base/DistributedObjects.h: Adde new DOContext struct.
	Rewrite code for moving data to/from method call stackframes and
	encoding/decoding it.  The functions to encode/decode each data item
	are no longer nested, and pass a context structure around which
	provides for more information to be passed between the various layers
	of the process so that the whole thing is thread-safe and we don't
	get cases where code in one place tries to work with an object that
	was released in another place.
	Tested pretty extensively for libffcall stuff, with the simple test
	programs for maframe, and not at all for libffi.

2001-09-19  Adam Fedor  <fedor@gnu.org>

	* configure.in: But CPPFLAGS in quotes

2001-09-14  Adam Fedor  <fedor@gnu.org>

	* configure.in: Remove redundancies in iconv checking. Remove
	redundant AC_SUBST(LIBS) lines.

2001-09-12  Adam Fedor  <fedor@gnu.org>

	* Source/thr-pthread.m (objc_yield): Replace pthread_yield with 
	sched_yield.

2001-09-11  Adam Fedor  <fedor@gnu.org>

	* configure.in: Make sure to subst HAVE_PTHREAD_H into config.mak

2001-09-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCompatibility.m: GSXMLPlMake() unused argument removed.
	* Source/NSData.m: Unused and commented out XML plist code removed.
	* Source/NSString.m: ditto
	* Source/NSArray.m: Generate XML plists only when writing to file
	or to URL, not for the -description... methods.
	This is what MacOS-X does.
	* Source/NSDictionary.m: ditto

2001-09-05  Adam Fedor  <fedor@gnu.org>

	* configure.in: Define BROKEN_NESTED_FUNCTIONS if compiler sucks.
	* Source/NSArray.m (-sortedArrayUsingSelector:): Remove nested
	function.
	([NSMutableArray -sortUsingSelector:]): Likewise.